@@ -1,2 +1,0 @@
-ryu-manager ryu/openexchange/network/shortest_forwarding --ofp-tcp-listen-port=6677 --oxp-role=domain --oxp-server-ip=10.103.23.29 --oxp-server-port=6688 --observe-links
-
