@@ -1,1 +1,0 @@
-ryu-manager ryu/app/simple_switch.py --oxp-role=super --oxp-listen-host=127.0.0.1 --observe-links
